# tabfm-vishing

./: README.md  pyproject.toml  requirements.txt
data/: 1_EDA.ipynb  diccionario_datos_biocatch_sintetico.md
examples/: sagemaker_setup.sh  vishing_classification.ipynb  vishing_classification.py
tabfm/src/: classifier_and_regressor.py  classifier_and_regressor_test.py  model.py  tabfm_v1_0_0.py
